2012-10-05  Zan Dobersek  <zandobersek@gmail.com>

        [Gtk] fast/xsl/xslt-missing-namespace-in-xslt.xml is failing on the 64-bit Debug builder
        https://bugs.webkit.org/show_bug.cgi?id=91009

        Reviewed by Martin Robinson.

        Include libxml2 into the jhbuild module. Version 2.8.0 introduces
        a more correct (but not completely correct) behavior in the
        fast/xsl/xslt-missing-namespace-in-xslt.html test.

        * gtk/jhbuild.modules:

2012-10-05  Rob Buis  <rbuis@rim.com>

        [BlackBerry] Implement TestRunner.setMockDeviceOrientation
        https://bugs.webkit.org/show_bug.cgi?id=98542

        Reviewed by Antonio Gomes.

        PR 120681

        This fixes tests in fast/dom/DeviceOrientation.

        * DumpRenderTree/blackberry/TestRunnerBlackBerry.cpp:
        (TestRunner::setMockDeviceOrientation):

2012-10-05  Christophe Dumez  <christophe.dumez@intel.com>

        [WK2][WKTR] Implement UIClient focus callbacks in WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=98256

        Reviewed by Kenneth Rohde Christiansen.

        Implement UIClient's focus callbacks for the main page in
        WebKitTestRunner.

        * WebKitTestRunner/TestController.cpp:
        (WTR::focus):
        (WTR::TestController::initialize):

2012-10-05  Mark Hahnenberg  <mhahnenberg@apple.com>

        JSC should have a way to gather and log Heap memory use and pause times
        https://bugs.webkit.org/show_bug.cgi?id=98431

        Reviewed by Geoffrey Garen.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (main): Added a check as to whether we should dump our JSC Heap statistics on exit.

2012-10-05  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2] Fix mktemp() compilation warning in Minibrowser
        https://bugs.webkit.org/show_bug.cgi?id=98493

        Reviewed by Kenneth Rohde Christiansen.

        Fix wrong mktemp usage causing a compilation warning
        in MiniBrowser.
