@@ -1,3 +1,14 @@
+2012-10-05  Roger Fong  <roger_fong@apple.com>
+
+        Tests in webkitpy involving child processes are flaky. 
+        Skipping run_webkit_tests_integrationtest.py.
+        https://bugs.webkit.org/show_bug.cgi?id=98559
+
+        Reviewed by Dirk Pranke.
+
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
+        (MainTest.test_verbose_in_child_processes):
+
 2012-10-05  Zan Dobersek  <zandobersek@gmail.com>
 
         [Gtk] fast/xsl/xslt-missing-namespace-in-xslt.xml is failing on the 64-bit Debug builder
